[gd_scene load_steps=21 format=3 uid="uid://d20ku6m670vr1"]

[ext_resource type="Script" path="res://Game/scripts/card_manager.gd" id="1_4ysun"]
[ext_resource type="Script" path="res://Game/scripts/start.gd" id="1_8ka4x"]
[ext_resource type="Script" path="res://Game/scenes/main.gd" id="1_gouob"]
[ext_resource type="Script" path="res://Game/scripts/card_manager_enemy.gd" id="2_a261a"]
[ext_resource type="Script" path="res://Game/scripts/player_hand.gd" id="2_mnt7b"]
[ext_resource type="Script" path="res://Game/scripts/enemy_hand_up.gd" id="3_exhj1"]
[ext_resource type="Script" path="res://Game/scripts/card_manager_enemy_right.gd" id="3_isv1k"]
[ext_resource type="PackedScene" uid="uid://dn7t4aj4tu0v4" path="res://Game/scenes/background.tscn" id="3_j44is"]
[ext_resource type="Script" path="res://Game/scripts/card_manager_enemy_left.gd" id="4_awnpp"]
[ext_resource type="PackedScene" uid="uid://dsam111tltxan" path="res://Game/scenes/CardSlot.tscn" id="5_dlrfd"]
[ext_resource type="Script" path="res://Game/scripts/enemy_hand_right.gd" id="5_ppmxl"]
[ext_resource type="Script" path="res://Game/scripts/enemy_hand_left.gd" id="6_brei5"]
[ext_resource type="Script" path="res://Game/scripts/bot_player_func.gd" id="12_5o7ou"]
[ext_resource type="Texture2D" uid="uid://bkssgbqvrsxwb" path="res://assets/game/value.jpg" id="13_ee3kj"]
[ext_resource type="Texture2D" uid="uid://ch4ncwi1g4dlq" path="res://assets/game/form.jpg" id="14_td723"]
[ext_resource type="PackedScene" uid="uid://k4ebvk3lxk6r" path="res://GameStarter/setting.tscn" id="15_1d6tm"]
[ext_resource type="Texture2D" uid="uid://4cpm4ryw30kv" path="res://assets/ui/Settings.png" id="16_7vdtg"]
[ext_resource type="PackedScene" uid="uid://db0d4jn5sok86" path="res://GameStarter/rules_popup.tscn" id="17_x7aqy"]
[ext_resource type="Texture2D" uid="uid://dpf8x1ngdjwn4" path="res://assets/ui/RULES BUTTON.png" id="18_e7axl"]
[ext_resource type="PackedScene" uid="uid://p7n3ewamh80a" path="res://Game/scenes/end_game2.tscn" id="20_rng3j"]

[node name="Main" type="Node2D"]
script = ExtResource("1_gouob")

[node name="card_manager" type="Node2D" parent="."]
texture_filter = 1
script = ExtResource("1_4ysun")

[node name="card_manager_enemy" type="Node2D" parent="."]
script = ExtResource("2_a261a")

[node name="card_manager_enemy_right" type="Node2D" parent="."]
script = ExtResource("3_isv1k")

[node name="card_manager_enemy_left" type="Node2D" parent="."]
script = ExtResource("4_awnpp")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("2_mnt7b")

[node name="EnemyHandUp" type="Node2D" parent="."]
script = ExtResource("3_exhj1")

[node name="EnemyHandRight" type="Node2D" parent="."]
script = ExtResource("5_ppmxl")

[node name="EnemyHandLeft" type="Node2D" parent="."]
script = ExtResource("6_brei5")

[node name="Background" parent="." instance=ExtResource("3_j44is")]

[node name="Button" type="Button" parent="."]
offset_left = 606.0
offset_top = 1027.0
offset_right = 764.0
offset_bottom = 1075.0
text = "PLAY"

[node name="Button2" type="Button" parent="."]
offset_left = 1081.0
offset_top = 1027.0
offset_right = 1239.0
offset_bottom = 1075.0
text = "PASS
"

[node name="Cardslots" type="Node2D" parent="."]

[node name="cardslot" parent="Cardslots" instance=ExtResource("5_dlrfd")]
position = Vector2(1000, 620)

[node name="cardslot2" parent="Cardslots" instance=ExtResource("5_dlrfd")]
position = Vector2(1100, 620)

[node name="cardslot3" parent="Cardslots" instance=ExtResource("5_dlrfd")]
position = Vector2(900, 620)

[node name="cardslot4" parent="Cardslots" instance=ExtResource("5_dlrfd")]
position = Vector2(800, 620)

[node name="cardslot5" parent="Cardslots" instance=ExtResource("5_dlrfd")]
position = Vector2(1200, 620)

[node name="Cardslots2" type="Node2D" parent="."]
z_index = -1

[node name="cardslot" parent="Cardslots2" instance=ExtResource("5_dlrfd")]
position = Vector2(1000, 230)

[node name="cardslot2" parent="Cardslots2" instance=ExtResource("5_dlrfd")]
position = Vector2(1100, 230)

[node name="cardslot3" parent="Cardslots2" instance=ExtResource("5_dlrfd")]
position = Vector2(900, 230)

[node name="cardslot4" parent="Cardslots2" instance=ExtResource("5_dlrfd")]
position = Vector2(800, 230)

[node name="cardslot5" parent="Cardslots2" instance=ExtResource("5_dlrfd")]
position = Vector2(1200, 230)

[node name="Cardslots3" type="Node2D" parent="."]
z_index = -1

[node name="cardslot" parent="Cardslots3" instance=ExtResource("5_dlrfd")]
position = Vector2(500, 500)
rotation = 1.5708

[node name="cardslot2" parent="Cardslots3" instance=ExtResource("5_dlrfd")]
position = Vector2(500, 600)
rotation = 1.5708

[node name="cardslot3" parent="Cardslots3" instance=ExtResource("5_dlrfd")]
position = Vector2(500, 400)
rotation = 1.5708

[node name="cardslot4" parent="Cardslots3" instance=ExtResource("5_dlrfd")]
position = Vector2(500, 300)
rotation = 1.5708

[node name="cardslot5" parent="Cardslots3" instance=ExtResource("5_dlrfd")]
position = Vector2(500, 700)
rotation = 1.5708

[node name="Cardslots4" type="Node2D" parent="."]
z_index = -1

[node name="cardslot" parent="Cardslots4" instance=ExtResource("5_dlrfd")]
position = Vector2(1500, 500)
rotation = 1.5708

[node name="cardslot2" parent="Cardslots4" instance=ExtResource("5_dlrfd")]
position = Vector2(1500, 600)
rotation = 1.5708

[node name="cardslot3" parent="Cardslots4" instance=ExtResource("5_dlrfd")]
position = Vector2(1500, 400)
rotation = 1.5708

[node name="cardslot4" parent="Cardslots4" instance=ExtResource("5_dlrfd")]
position = Vector2(1500, 300)
rotation = 1.5708

[node name="cardslot5" parent="Cardslots4" instance=ExtResource("5_dlrfd")]
position = Vector2(1500, 700)
rotation = 1.5708

[node name="start" type="Node2D" parent="."]
script = ExtResource("1_8ka4x")

[node name="bot_player_func" type="Node2D" parent="."]
script = ExtResource("12_5o7ou")

[node name="sort_value" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 215.0
offset_top = 954.0
offset_right = 256.0
offset_bottom = 1011.0
texture_normal = ExtResource("13_ee3kj")

[node name="sort_form" type="TextureButton" parent="."]
offset_left = 287.0
offset_top = 954.0
offset_right = 328.0
offset_bottom = 1012.0
texture_normal = ExtResource("14_td723")

[node name="message" type="Label" parent="."]
visible = false
offset_left = 900.0
offset_top = 750.0
offset_right = 940.0
offset_bottom = 773.0
horizontal_alignment = 1
uppercase = true

[node name="Timer" type="Timer" parent="."]

[node name="cardendslot" parent="." instance=ExtResource("5_dlrfd")]
position = Vector2(1000, 425)

[node name="Setting" parent="." instance=ExtResource("15_1d6tm")]
visible = false
position = Vector2(401, 114)

[node name="Settings_btn" type="TextureButton" parent="."]
offset_left = 25.0
offset_top = 19.0
offset_right = 105.0
offset_bottom = 99.0
scale = Vector2(0.9, 0.9)
texture_normal = ExtResource("16_7vdtg")

[node name="Rules_Popup" parent="." instance=ExtResource("17_x7aqy")]
visible = false
position = Vector2(409, 89)

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 2000
offset_left = 1794.0
offset_top = 9.0
offset_right = 1909.0
offset_bottom = 133.0
scale = Vector2(0.9, 0.9)
texture_normal = ExtResource("18_e7axl")

[node name="EndGame" parent="." instance=ExtResource("20_rng3j")]
visible = false

[connection signal="card_played" from="card_manager" to="card_manager_enemy_left" method="_on_card_manager_card_played"]
[connection signal="enemy_right" from="card_manager_enemy" to="card_manager_enemy_right" method="_on_card_manager_enemy_enemy_right"]
[connection signal="enemy" from="card_manager_enemy_right" to="card_manager" method="_on_card_manager_enemy_right_enemy"]
[connection signal="enemy_up" from="card_manager_enemy_left" to="card_manager_enemy" method="_on_card_manager_enemy_left_enemy_up"]
[connection signal="pressed" from="Button" to="card_manager" method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="card_manager" method="_on_button_2_pressed"]
[connection signal="pressed" from="sort_value" to="card_manager" method="_on_sort_value_pressed"]
[connection signal="pressed" from="sort_form" to="card_manager" method="_on_sort_form_pressed"]
[connection signal="timeout" from="Timer" to="card_manager" method="_on_timer_timeout"]
[connection signal="pressed" from="Settings_btn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
